# chess

./: CMakeLists.txt  a.out  chess_save.txt  game.pgn  main.c  moves.txt  paths.txt
cmake_modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
